--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ readme = "README.md"
 authors = [
     { name = "Jack", email = "jackg18@hotmail.co.uk" }
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 dependencies = [
-    "numpy>=2.2.4",
-    "scikit-learn>=1.6.1",
+  "numpy>=2.0.2",
+  "scikit-learn>=1.6.1",
+  "typing-extensions>=4.15.0",
 ]
 
 [build-system]
@@ -18,7 +19,8 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
-    "ipykernel>=6.29.5",
-    "matplotlib>=3.10.6",
-    "ruff>=0.11.2",
+  "ipykernel>=6.31.0",
+  "matplotlib>=3.9.4",
+  "pytest>=8.4.2",
+  "ruff>=0.14.9",
 ]
